# Escr

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: README.md  gdelt_filters.yaml  newsapi_filters.yaml  settings.yaml  sources.yaml  yahoo.finance.yaml
docs/: adding_a_new_source.md  architecture.md  data_model.md  development.md
scripts/: README.md  check_sources.py  dry_run_commodity.py  dry_run_gdelt.py  dry_run_newsapi.py  validate_config.py
src/intelligence_layer/: __init__.py
src/intelligence_layer/collectors/: __init__.py  base.py
src/intelligence_layer/models/: __init__.py  intelligence_record.py  source_config.py
src/intelligence_layer/normalizers/: __init__.py  base.py
src/intelligence_layer/publishers/: __init__.py  base.py
src/intelligence_layer/utils/: __init__.py  config_loader.py  datetime_utils.py  exceptions.py  logging.py
src/intelligence_layer/validators/: __init__.py  base.py
storage/: README.md
tests/: README.md
tests/collectors/: __init__.py
tests/collectors/commodities/: __init__.py
tests/collectors/conflict/: __init__.py
tests/collectors/maritime/: __init__.py
tests/collectors/news/: __init__.py  test_gdelt_collector.py  test_newsapi_collector.py  test_query_builder.py
tests/collectors/sanctions/: __init__.py
tests/collectors/weather/: __init__.py
tests/fixtures/: __init__.py
tests/fixtures/raw/: gdelt_sample_response.json  newsapi_sample_response.json
tests/normalizers/: __init__.py
tests/publishers/: __init__.py
tests/validators/: __init__.py
(+12 files in other folders)
